--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=
+NEXTAUTH_SECRET=
 GITHUB_ID=
 GITHUB_SECRET=
 GOOGLE_ID=
